# KNU

./: long_mantis.cpp
.github/workflow/: sphinx.yml
2sem/mylib/: List  List.cpp
Just_tasks/: task_21_09_21.cpp
Lab_1/: long_mantis.cpp  long_mantis_char.cpp
Lab_2/: sfml_test.cpp
Lab_3/: task.cpp
Lab_4/: file_test.cpp  main.cpp
Lab_5/: main.cpp
Year1/hashcode/: hash2015_qual.cpp  hash2021_qual  hash2021_qual.cpp
Year2/1sem/DB/labs/Lab1/: CMakeLists.txt  main.cpp
Year2/1sem/DB/labs/Lab1/lib/: Classes.hpp  Constants.hpp  count.cpp  count.hpp  del.cpp  del.hpp  functions.cpp  functions.hpp  get.cpp  get.hpp  insert.cpp  insert.hpp  update.cpp  update.hpp
Year2/2sem/OOOP/Lab3/: CMakeLists.txt  ant.h  antAlgorithm.h  basicAnt.h  chooseStrategy.h  colony.h  constants.h  main-GUI.cpp  main.cpp  main.moc  map.h  updateFeromoneStrategy.h
Year2/2sem/OOOP/Lab3/antAlgorithms/: antAlgorithm.h  antAlgorithmFactory.h  basicAntAlgotiyhm.h  multyThreadedAlgorythm.h
Year2/2sem/OOOP/Lab3/ants/: ant.h  basicAnt.h  feromoneAnt.h  multithreadedAnt.h
Year2/2sem/OOOP/Lab3/antsGUI/: antsGUI.pro  mainwindow.cpp
Year2/2sem/OOOP/Lab3/chooseBestRootStrategies/: chooseBestFeromoneRoot.h  chooseBestRoot.h
Year2/2sem/OOOP/Lab3/chooseNextNodeStrategies/: chooseStrategy.h
Year2/2sem/OOOP/Lab3/colonies/: colony.h
Year2/2sem/OOOP/Lab3/maps/: map.h
Year2/2sem/OOOP/Lab3/updateFeromoneStrategies/: basicFeromoneDecayStrategy.h  updateFeromoneStrategy.h
docs/: data.html  genindex.html  gloss.html  glossary.html  handlers.html  index.html  modules.html  py-modindex.html  search.html  searchindex.js  utils.html
docs/_sources/: data.rst.txt  (+4 more)
(+363 files in other folders)
